DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2004-12-15 allenb   Added simple, working, tested Barrier implementation.
                    NEW VERSION: 0.40.6
2004-12-02 patrickh Updated to allow the use of version 8.1 of the Intel C++
                    compiler.
                    NEW VERSION: 0.40.5
2004-12-01 allenb   Added support for demangling of callstack data with GCC.
>>>>>>> 1.161
2004-11-18 patrickh Changed vpr::Int8 from char to signed char.
                    NEW VERSION: 0.40.2
2004-10-27 allenb   Added support for multi-threaded profile data collection.
                    Profile data is now collected and managed per thread.
2004-10-27 allenb   Refactored BaseThread handling and usage.
                    This cleans up some crufty corners of this code that
                    still has the flavor of polymorphic threads.
2004-10-27 allenb   Refactored API of ProfileNode and ProfileManager.
                    Removed redundant code, simplified API, and fixed bugs.
                    Added XML output of profile data.
                    Removed framecounter from ProfileManager.
2004-10-14 patrickh Added support for named semaphores in vpr::SemaphorePosix
                    for use on Darwin 7.5 and earlier.
                    NEW VERSION: 0.40.1
2004-10-11 patrickh Refactored vpr::LibraryLoader into a simple collection of
                    helper functions.
                    NEW VERSION: 0.40.0
2004-09-26 patrickh Removed the NSPR dependency on Mac OS X.
                    NEW VERSION: 0.39.1
2004-09-24 patrickh Removed the flags parameter from the methods recvfrom() and
                    sendto() in vpr::SocketDatagram.
                    NEW VERSION: 0.39.0
2004-09-08 dshipton Interface changes to vpr::ProfileManager.
                    NEW VERSION: 0.38.0
2004-08-22 allenb   Added new feature the TSObjectProxy to allow direct request